Add Login form to project; Add Registration functional

--- a/src/main/resources/templates/departments/department-list.html
+++ b/src/main/resources/templates/departments/department-list.html
@@ -19,6 +19,8 @@
 
         <a th:href="@{/}" th:text="#{backToHomePage}">Back to Home page</a>
 
+        <a th:href="@{/logout}" class="pull-right">Logout</a>
+
         <br><br>
 
         <h3 th:text="#{departments.headline}">List of Departments</h3>
