--- a/src/main/resources/templates/registrationPage.html
+++ b/src/main/resources/templates/registrationPage.html
@@ -17,31 +17,53 @@
 <body>
 <div class="container">
     <h1>Registration page</h1>
+    <br><br>
     <form id="userForm" th:action="@{/user/register}" th:object="${user}" action="#" method="post" class="form-horizontal">
         <div th:if="${#fields.hasErrors('global')}" th:errors="*{global}" class="alert alert-danger">Incorrect password confirmation</div>
         <input type="hidden" th:field="*{id}"/>
 
-        <div class="form-group" th:classappend="${#fields.hasErrors('email')} ? 'has-error'">
-            <label class="control-label col-xs-2" for="email">Email</label>
-            <div class="col-xs-10">
-                <input id="email" type="email" title="email" th:field="*{email}"/>
-                <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="help-block">Email Error</span>
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext">
+                <p class="h6 pull-right">Email:</p>
+            </div>
+            <div class="col-sm-5">
+                <input type="text" th:field="*{email}" th:class="${#fields.hasErrors('email')} ? 'form-control is-invalid' : 'form-control'" placeholder="Email"/>
+                <span class="help-block" th:if="${#fields.hasErrors('email')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('email')}" th:text="${err}"/>
+                        </ul>
+                    </span>
             </div>
         </div>
-        <div class="form-group" th:classappend="${#fields.hasErrors('password')} ? 'has-error'">
-            <label class="control-label col-xs-2" for="password">Password</label>
-            <div class="col-xs-10">
-                <input id="password" type="password" title="password" th:field="*{password}"/>
-                <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="help-block">Password Error</span>
+
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext">
+                <p class="h6 pull-right">Password:</p>
+            </div>
+            <div class="col-sm-5">
+                <input type="password" th:field="*{password}" th:class="${#fields.hasErrors('password')} ? 'form-control is-invalid' : 'form-control'" placeholder="Password"/>
+                <span class="help-block" th:if="${#fields.hasErrors('password')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('password')}" th:text="${err}"/>
+                        </ul>
+                    </span>
             </div>
         </div>
-        <div class="form-group" th:classappend="${#fields.hasErrors('passwordConfirmation')} ? 'has-error'">
-            <label class="control-label col-xs-2" for="passwordConfirmation">Password Confirmation</label>
-            <div class="col-xs-10">
-                <input id="passwordConfirmation" type="password" title="passwordConfirmation" th:field="*{passwordConfirmation}"/>
-                <span th:if="${#fields.hasErrors('passwordConfirmation')}" th:errors="*{passwordConfirmation}" class="help-block">Password Confirmation Error</span>
+
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext">
+                <p class="h6 pull-right">Password confirmation:</p>
+            </div>
+            <div class="col-sm-5">
+                <input type="password" th:field="*{passwordConfirmation}" th:class="${#fields.hasErrors('passwordConfirmation')} ? 'form-control is-invalid' : 'form-control'" placeholder="Password confirmation"/>
+                <span class="help-block" th:if="${#fields.hasErrors('passwordConfirmation')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('passwordConfirmation')}" th:text="${err}"/>
+                        </ul>
+                    </span>
             </div>
         </div>
+
         <div class="form-actions col-xs-offset-2 col-xs-10">
             <input type="submit" class="btn btn-primary" value="Register"/>
         </div>
