--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -20,8 +20,11 @@
 <div class="container">
     <h1>Login page</h1>
 
-    <div th:if="${param.error}" class="alert alert-danger">Invalid username and password.</div>
+    <div th:if="${param.error}" th:text="${session.SPRING_SECURITY_LAST_EXCEPTION.message}" class="alert alert-danger">Login Error</div>
+    <div th:if="${message}" th:text="${message}" class="alert alert-success">Message</div>
+    <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Error Message</div>
     <div th:if="${param.logout}" class="alert alert-danger">You have been logged out.</div>
+
 
     <form th:action="@{/goLogin}" method="post" class="form-horizontal">
         <div class="form-group">
@@ -40,7 +43,7 @@
         </div>
         <div class="form-actions col-xs-offset-2 col-xs-10">
             <input type="submit" class="btn btn-primary" value="Sign In"/>
-            <a th:href="@{/signUp}" class="btn btn-secondary">Sign Up</a>
+            <a th:href="@{/signup}" class="btn btn-secondary">Sign Up</a>
         </div>
     </form>
 </div>
