Add reset password functional

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -45,6 +45,9 @@
         <div class="form-actions col-xs-offset-2 col-xs-10">
             <input type="submit" class="btn btn-primary" value="Sign In"/>
             <a th:href="@{/signup}" class="btn btn-secondary">Sign Up</a>
+            <br><br>
+            <a th:href="@{/forgotPassword}">Reset Password</a>
+
         </div>
     </form>
 </div>
