--- a/src/main/resources/templates/registrationPage.html
+++ b/src/main/resources/templates/registrationPage.html
@@ -64,6 +64,30 @@
             </div>
         </div>
 
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext">
+                <p class="h6 pull-right">Security Question:</p>
+            </div>
+            <div class="col-sm-5">
+                <select class="form-control selectpicker" id="question" name="questionId">
+                    <option th:each="question : ${questions}"
+                            th:value="${question.id}"
+                            th:text="${question.text}"
+                            th:selected="${question.id == questionId}">
+                    </option>
+                </select>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext">
+                <p class="h6 pull-right">Answer:</p>
+            </div>
+            <div class="col-sm-5">
+                <input class="form-control" id="answer" type="text" name="answer" th:value="${answer}" placeholder="Answer"/>
+            </div>
+        </div>
+
         <div class="form-actions col-xs-offset-2 col-xs-10">
             <input type="submit" class="btn btn-primary" value="Register"/>
         </div>
