--- a/src/main/resources/templates/departments/department-list.html
+++ b/src/main/resources/templates/departments/department-list.html
@@ -15,6 +15,10 @@
     <title th:text="#{departments.headline}">List of Departments</title>
 </head>
 <body>
+    <div class="container" th:replace="fragments/menu :: menu">
+        <p>menu</p>
+    </div>
+
     <div class="container">
 
         <a th:href="@{/}" th:text="#{backToHomePage}">Back to Home page</a>
