--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -23,10 +23,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
-                <a class="nav-item nav-link" href="#">Pricing</a>
-                <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                <a class="nav-item nav-link active" href="#" th:href="@{/documents/list}">Documents <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#" th:href="@{/departments/list}">Departments</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/changenotices/list}">Changes</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/externaldispatches/list}">Externals</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/companies/list}">Companies</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list}">Internals</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list/albums}">Albums</a>
             </div>
         </div>
         <a class="nav pull-right" th:href="@{/logout}">Logout</a>
