--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -21,5 +21,24 @@ Current user roles:
 Current user roles 2:
 <span sec:authentication="authorities">[ROLE_USER, ROLE_ADMIN]</span>
 
+<div sec:authorize="hasRole('ROLE_USER')">
+    Only users can see this message
+</div>
+<div sec:authorize="hasRole('ROLE_ADMIN')">
+    Only admins can see this message
+</div>
+
+<div th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+    Only admins can see this message
+</div>
+
+<div sec:authorize-url="/user/delete/1">
+    Only users who can call "/user/delete/1" URL can see this message
+</div>
+
+<div sec:authorize-url="POST /user/delete/1">
+    Only users who can POST to /user/delete/1 will see this message
+</div>
+
 </body>
 </html>
