Add User creation functional to the project

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -110,7 +110,10 @@
 
         <div class="row">
             <div class="col-md-4">
-
+                <a th:href="@{/users/list}">
+                    <img th:src="@{/images/archive.png}"/>
+                    <h4 class="text-center" th:text="#{index.section.copiesArchive}">Copies Archive</h4>
+                </a>
             </div>
 
             <div class="col-md-4">
