--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -15,33 +15,43 @@
 </head>
 <body>
 
+
+
 <div class="container" th:fragment="menu">
+
+    <a class="h5" th:href="@{/}" th:text="#{backToHomePage}" href="#">Home</a>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" th:href="@{/}" th:text="#{backToHomePage}" href="#">Navbar</a>
-<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#" th:href="@{/documents/list}">Documents <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#" th:href="@{/departments/list}">Departments</a>
-                <a class="nav-item nav-link" href="#" th:href="@{/changenotices/list}">Changes</a>
-                <a class="nav-item nav-link" href="#" th:href="@{/externaldispatches/list}">Externals</a>
-                <a class="nav-item nav-link" href="#" th:href="@{/companies/list}">Companies</a>
-                <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list}">Internals</a>
-                <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list/albums}">Albums</a>
+                <a class="nav-item nav-link active" href="#" th:href="@{/documents/list}" th:text="#{documents}">Documents <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#" th:href="@{/departments/list}" th:text="#{index.section.departments}">Departments</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/changenotices/list}" th:text="#{changeNotices}">Changes</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/externaldispatches/list}" th:text="#{externalDispatches}">Externals</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/companies/list}" th:text="#{index.section.companies}">Companies</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list}" th:text="#{internalDispatches}">Internals</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list/albums}" th:text="#{index.section.copiesArchive}">Albums</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/users/list}" th:text="#{users}">Users</a>
             </div>
         </div>
-        <ul class="nav pull-right">
-            <li>
-                <a th:href="@{/profile}" class="nav-link" > Hi, <span sec:authentication="principal.username">Bob</span> </a>
-            </li>
-            <li>
-                <a class="nav-link" th:href="@{/logout}">Logout</a>
-            </li>
 
+        <ul class="nav-item dropdown pull-right">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="${#authentication.name}">
+                Dropdown link
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#" th:href="@{'/users/showUserInfoByEmail/' + ${#authentication.name}}" th:text="#{userInfo}">User info</a>
+                <a class="dropdown-item" href="#" th:href="@{/logout}" th:text="#{logout}">Logout</a>
+            </div>
         </ul>
     </nav>
+
+        <script th:src="@{/js/jquery.min.js}"></script>
+        <script th:src="@{/js/popper.min.js}"></script>
+        <script th:src="@{/css/bootstrap-4.5.0-dist/js/bootstrap.bundle.js}"></script>
+
 </div>
 
 </body>
