Add users.png for users ref

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,8 +111,8 @@
         <div class="row">
             <div class="col-md-4">
                 <a th:href="@{/users/list}">
-                    <img th:src="@{/images/archive.png}"/>
-                    <h4 class="text-center" th:text="#{index.section.copiesArchive}">Copies Archive</h4>
+                    <img th:src="@{/images/users.png}"/>
+                    <h4 class="text-center" th:text="#{users}">Users</h4>
                 </a>
             </div>
 
