--- a/src/main/resources/templates/users/user-list.html
+++ b/src/main/resources/templates/users/user-list.html
@@ -27,6 +27,15 @@
 
         <hr>
 
+        <nav class="navbar navbar-light bg-light">
+            <form class="form-inline" th:action="@{/users/list}" method="get">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" th:name="email" th:value="${param.email}">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </nav>
+
+        <br>
+
         <a th:href="@{/users/showAddForm}" class="btn btn-primary btn-sm mb-3" th:text="#{addUser}">Add User</a>
 
         <table class="table table-bordered table-hover">
