--- a/src/main/resources/templates/users/user-info.html
+++ b/src/main/resources/templates/users/user-info.html
@@ -68,11 +68,12 @@
             </div>
 
             <div class="row px-5">
-                <div class="col-sm-3">
+                <div class="col-sm-2">
 
                 </div>
-                <div class="col-sm-3 text-right">
+                <div class="col-sm-4 text-right">
                     <a th:href="@{'/users/showFormForUpdate/' + ${user.id}}" class="btn btn-sm btn-outline-info mb-1" th:text="#{update}">Update</a>
+                    <a th:href="@{'/users/changeStatus/' + ${user.id}}" class="btn btn-sm btn-outline-danger mb-1" th:text="#{${user.enabled ? 'ban' : 'unBan'}}">Ban/Unban</a>
                     <a th:href="@{'/users/delete/' + ${user.id}}" class="btn btn-sm btn-outline-danger mb-1"
                        onclick="if (!(confirm('Are you sure?'))) return false" th:text="#{delete}">Delete</a>
                 </div>
