--- a/src/main/resources/templates/users/user-list.html
+++ b/src/main/resources/templates/users/user-list.html
@@ -29,8 +29,8 @@
 
         <nav class="navbar navbar-light bg-light">
             <form class="form-inline" th:action="@{/users/list}" method="get">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" th:name="email" th:value="${param.email}">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="search" th:placeholder="#{search}" aria-label="Search" th:name="email" th:value="${param.email}">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" th:text="#{search}">Search</button>
             </form>
         </nav>
 
