--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -18,7 +18,9 @@
 <body>
 
 <div class="container">
-    <h1 th:text="#{loginPage}">Login page</h1>
+    <br><br>
+    <h1 class="offset-3" th:text="#{loginPage}">Login page</h1>
+    <br>
 
     <div th:if="${param.error}" class="alert alert-danger" th:text="#{invalidNameAndPass}">Invalid username and password.</div>
     <div th:if="${message}" th:text="${message}" class="alert alert-success">Message</div>
@@ -27,31 +29,30 @@
 
 
     <form th:action="@{/goLogin}" method="post" class="form-horizontal">
-        <div class="form-group">
+        <div class="form-group offset-4">
             <label class="control-label col-xs-2" for="username" th:text="#{email} + ':'"> Email: </label>
 
             <div class="col-xs-10">
                 <input id="username" type="text" name="username"/>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group offset-4">
             <label class="control-label col-xs-2" for="password" th:text="#{password} + ':'"> Password: </label>
 
             <div class="col-xs-10">
                 <input id="password" type="password" name="password"/>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group offset-4">
             <label class="control-label col-xs-2" for="remember" th:text="#{rememberMe}"> Remember Me? </label>
             <div class="col-xs-10">
                 <input id="remember" type="checkbox" name="remember" value="true" />
             </div>
         </div>
         <div class="form-actions col-xs-offset-2 col-xs-10">
-            <button type="submit" class="btn btn-primary" th:text="#{signIn}"/>
-            <a th:href="@{/signup}" class="btn btn-secondary" th:text="#{signUp}">Sign Up</a>
+            <button type="submit" class="btn btn-primary offset-4" th:text="#{signIn}"/>
             <br><br>
-            <a th:href="@{/forgotPassword}" th:text="#{resetPassword}">Reset Password</a>
+            <a class="offset-4" th:href="@{/forgotPassword}" th:text="#{resetPassword}">Reset Password</a>
 
         </div>
     </form>
