Delete VerificationToken.java and business logic for it

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -52,7 +52,7 @@
         <div class="form-actions col-xs-offset-2 col-xs-10">
             <button type="submit" class="btn btn-primary offset-4" th:text="#{signIn}"/>
             <br><br>
-            <a class="offset-4" th:href="@{/forgotPassword}" th:text="#{resetPassword}">Reset Password</a>
+            <a class="offset-4" th:href="@{/resetPassword}" th:text="#{resetPassword}">Reset Password</a>
 
         </div>
     </form>
