--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -3,59 +3,34 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
 
-    <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
+	<link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
 
-    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
+	<link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-<title>Reset Password</title>
+<title>Reset password</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Reset Password</h1>
-        <br />
+	<div class="container">
+		<h1>Reset Password</h1>
+		<br />
+		<div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Error Message</div>
 
-        <form th:action="@{/user/savePassword}" action="#" method="post" class="form-horizontal">
-            <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Message</div>
+		<form th:action="@{/users/resetPassword}" method="post" class="form-horizontal">
+			<div class="row">
+				<label class="col-sm-1 h5" for="email">Email:</label>
+				<span class="col-sm-5">
+					<input class="form-control" id="email" name="email" type="email" />
+				</span>
+				<button class="btn btn-primary" type="submit">Reset Password</button>
+			</div>
+		</form>
 
-            <div class="form-group">
-                <label class="control-label col-xs-2" for="question">Security Question:</label>
-                <div class="col-xs-10">
-                    <select id="question" name="questionId">
-                        <option th:each="question : ${questions}" th:value="${question.id}" th:text="${question.text}">Question</option>
-                    </select>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-xs-2" for="answer">Answer</label>
-                <div class="col-xs-10">
-                    <input id="answer" type="text" name="answer" />
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-xs-2" for="password">Password</label>
-                <div class="col-xs-10">
-                    <input id="password" type="password" name="password" />
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-xs-2" for="passwordConfirmation">Password Confirmation</label>
-                <div class="col-xs-10">
-                    <input id="passwordConfirmation" type="password" name="passwordConfirmation" />
-                </div>
-            </div>
-            <input id="token" type="hidden" name="token" th:value="${token}" />
-            <div class="form-actions col-xs-offset-2 col-xs-10">
-                <input type="submit" class="btn btn-primary" value="Reset Password" />
-            </div>
-        </form>
-
-        <br /> <a class="btn btn-primary" th:href="@{/login}">Sign In</a> <a class="btn btn-default"
-            th:href="@{/signup}">Sign Up</a>
-    </div>
+		<br />
+		<a class="btn btn-primary" th:href="@{/login}">Sign In</a>
+	</div>
 </body>
 </html>
