--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -19,35 +19,27 @@
 
 <div class="container">
     <br><br>
-    <h1 class="offset-3" th:text="#{loginPage}">Login page</h1>
+    <h1 class="offset-3 px-3" th:text="#{loginPage}">Login page</h1>
     <br>
 
-    <div th:if="${param.error}" class="alert alert-danger" th:text="#{invalidNameAndPass}">Invalid username and password.</div>
-    <div th:if="${message}" th:text="${message}" class="alert alert-success">Message</div>
-    <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Error Message</div>
-    <div th:if="${param.logout}" class="alert alert-danger" th:text="#{loggedOut}">You have been logged out.</div>
+    <div th:if="${param.error}" class="alert alert-danger col-sm-5 offset-3" th:text="#{invalidNameAndPass}">Invalid username and password.</div>
+    <div th:if="${message}" th:text="${message}" class="alert alert-success offset-3">Message</div>
+    <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger offset-3">Error Message</div>
+    <div th:if="${param.logout}" class="alert alert-danger offset-3" th:text="#{loggedOut}">You have been logged out.</div>
 
 
-    <form th:action="@{/goLogin}" method="post" class="form-horizontal">
+    <form th:action="@{/goLogin}" method="post">
         <div class="form-group offset-4">
-            <label class="control-label col-xs-2" for="username" th:text="#{email} + ':'"> Email: </label>
-
-            <div class="col-xs-10">
-                <input id="username" type="text" name="username"/>
-            </div>
+            <label class="h6" for="username" th:text="#{email} + ':'"> Email: </label>
+            <input id="username" class="form-control col-sm-4" th:placeholder="#{email}" type="email" name="username"/>
         </div>
         <div class="form-group offset-4">
-            <label class="control-label col-xs-2" for="password" th:text="#{password} + ':'"> Password: </label>
-
-            <div class="col-xs-10">
-                <input id="password" type="password" name="password"/>
-            </div>
+            <label class="h6" for="password" th:text="#{password} + ':'"> Password: </label>
+            <input id="password" class="form-control col-sm-4" th:placeholder="#{password}" type="password" name="password"/>
         </div>
-        <div class="form-group offset-4">
-            <label class="control-label col-xs-2" for="remember" th:text="#{rememberMe}"> Remember Me? </label>
-            <div class="col-xs-10">
-                <input id="remember" type="checkbox" name="remember" value="true" />
-            </div>
+        <div class="form-check offset-4 mb-3">
+            <input type="checkbox" class="form-check-input" id="remember" value="true">
+            <label class="form-check-label" th:text="#{rememberMe}" for="remember">Check me out</label>
         </div>
         <div class="form-actions col-xs-offset-2 col-xs-10">
             <button type="submit" class="btn btn-primary offset-4" th:text="#{signIn}"/>
