--- a/src/main/resources/templates/users/user-form.html
+++ b/src/main/resources/templates/users/user-form.html
@@ -9,6 +9,10 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
+    <script th:src="@{/js/pwstrength.js}"></script>
+
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+
     <title th:text="#{${user.isNew() ? 'saveUserFormTitle' : 'updateUserFormTitle'}}">Save User</title>
 </head>
 <body>
@@ -171,6 +175,31 @@
         </form>
     </div>
 
+    <script type="text/javascript">
+        $(document)
+            .ready(
+                function() {
+                    options = {
+                        common : {
+                            minChar : 8
+                        },
+                        ui : {
+                            showVerdictsInsideProgressBar : true,
+                            showErrors : true,
+                            errorMessages : {
+                                wordLength : 'Your password is too short',
+                                wordNotEmail : 'Do not use your email as your password',
+                                wordSequences : 'Your password contains sequences',
+                                wordLowercase : 'Use lower case characters',
+                                wordUppercase : 'Use upper case characters',
+                                wordOneNumber : 'Use numbers',
+                                wordOneSpecialChar : 'Use special characters: [~!@#$%^&amp;*,_?]'
+                            }
+                        }
+                    };
+                    $('#password').pwstrength(options);
+                });
+    </script>
 
 </body>
 </html>
