Add JS password strength to add new user form

--- a/src/main/resources/templates/registrationPage.html
+++ b/src/main/resources/templates/registrationPage.html
@@ -19,19 +19,45 @@
     <title>Registration Page</title>
 </head>
 <body>
+<div class="container" th:replace="fragments/menu :: menu">
+    <p>menu</p>
+</div>
+
+
+
 <div class="container">
     <h1>Registration page</h1>
     <br><br>
-    <form id="userForm" th:action="@{/user/register}" th:object="${user}" action="#" method="post" class="form-horizontal">
-        <div th:if="${#fields.hasErrors('global')}" th:errors="*{global}" class="alert alert-danger">Incorrect password confirmation</div>
-        <input type="hidden" th:field="*{id}"/>
+    <form class="form-horizontal" th:object="${user}" th:action="@{/users/save}" method="post">
+
+        <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
+            <p th:text="#{pleaseCorrectValues}">Error Message</p>
+        </div>
+
+        <input type="hidden" th:field="*{id}">
+        <input type="hidden" th:field="*{created}">
+        <input type="hidden" th:field="*{enabled}">
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext">
-                <p class="h6 pull-right">Email:</p>
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 th:text="#{userName} + ':'" class="pull-right">User name:</h6>
             </div>
             <div class="col-sm-5">
-                <input type="text" th:field="*{email}" th:class="${#fields.hasErrors('email')} ? 'form-control is-invalid' : 'form-control'" placeholder="Email"/>
+                <input type="text" th:field="*{name}" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{userName}"/>
+                <span class="help-block" th:if="${#fields.hasErrors('name')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
+                        </ul>
+                    </span>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 th:text="#{email} + ':'" class="pull-right">Email:</h6>
+            </div>
+            <div class="col-sm-5">
+                <input type="text" th:field="*{email}" th:class="${#fields.hasErrors('email')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{email}"/>
                 <span class="help-block" th:if="${#fields.hasErrors('email')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('email')}" th:text="${err}"/>
@@ -41,11 +67,20 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext">
-                <p class="h6 pull-right">Password:</p>
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 th:text="#{password} + ':'" class="pull-right">Password:</h6>
             </div>
             <div class="col-sm-5">
-                <input type="password" th:field="*{password}" th:class="${#fields.hasErrors('password')} ? 'form-control is-invalid' : 'form-control'" placeholder="Password"/>
+                <input type="password" th:field="*{password}" th:class="${#fields.hasErrors('password')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{password}"/>
+                <!--                    <span class="help-block" th:if="${#fields.hasErrors('password')}">-->
+                <!--                        <div th:each="err : ${#fields.errors('password')}">-->
+                <!--                            <div th:switch="${err}">-->
+                <!--                                <ul>-->
+                <!--                                    <li class="text-danger" th:case="'1'" th:text="#{tooShortPass}"/>-->
+                <!--                                </ul>-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </span>-->
                 <span class="help-block" th:if="${#fields.hasErrors('password')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('password')}" th:text="${err}"/>
@@ -55,11 +90,11 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext">
-                <p class="h6 pull-right">Password confirmation:</p>
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 th:text="#{passwordConfirmation} + ':'" class="pull-right">Password confirmation:</h6>
             </div>
             <div class="col-sm-5">
-                <input type="password" th:field="*{passwordConfirmation}" th:class="${#fields.hasErrors('passwordConfirmation')} ? 'form-control is-invalid' : 'form-control'" placeholder="Password confirmation"/>
+                <input type="password" th:field="*{passwordConfirmation}" th:class="${#fields.hasErrors('passwordConfirmation')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="#{passwordConfirmation}"/>
                 <span class="help-block" th:if="${#fields.hasErrors('passwordConfirmation')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('passwordConfirmation')}" th:text="${err}"/>
@@ -69,60 +104,153 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext">
-                <p class="h6 pull-right">Security Question:</p>
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 class="pull-right" th:text="#{department} + ':'">Department:</h6>
             </div>
             <div class="col-sm-5">
-                <select class="form-control selectpicker" id="question" name="questionId">
-                    <option th:each="question : ${questions}"
-                            th:value="${question.id}"
-                            th:text="${question.text}"
-                            th:selected="${question.id == questionId}">
+                <select class="form-control selectpicker" th:field="*{department}">
+                    <option value="" th:text="#{nothingSelected}">Nothing selected</option>
+                    <option th:each="dropValue : ${departments}"
+                            th:value="${dropValue.name}"
+                            th:text="${dropValue.name}">
                     </option>
                 </select>
+                <span class="help-block" th:if="${#fields.hasErrors('department')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('department')}" th:text="${err}"/>
+                        </ul>
+                    </span>
             </div>
         </div>
+
+        <!--            <div class="row mb-3">-->
+        <!--                <div class="col-sm-2 form-control-plaintext offset-sm-1">-->
+        <!--                    <h6 th:text="#{role} + ':'" class="pull-right">Role:</h6>-->
+        <!--                </div>-->
+        <!--                <div class="col-sm-5">-->
+        <!--                    <div class="btn-group btn-group-toggle" data-toggle="buttons" th:class="${#fields.hasErrors('role')} ? 'btn-group btn-group-toggle is-invalid' : 'btn-group btn-group-toggle'">-->
+        <!--                        <div th:each="radioValue : ${T(com.igar15.filecabinet.entity.enums.Role).values()}" th:field="*{role}">-->
+        <!--                            <input type="radio" th:field="*{role}" th:value="${radioValue}"/>-->
+        <!--                            <label class="btn-sm btn-light" th:for="${#ids.prev('role')}" th:text="${radioValue}"></label>-->
+        <!--                        </div>-->
+        <!--                    </div>-->
+        <!--                    <span class="help-block" th:if="${#fields.hasErrors('role')}">-->
+        <!--                        <ul>-->
+        <!--                            <li class="text-danger" th:each="err : ${#fields.errors('role')}" th:text="${err}"/>-->
+        <!--                        </ul>-->
+        <!--                    </span>-->
+        <!--                </div>-->
+        <!--            </div>-->
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext">
-                <p class="h6 pull-right">Answer:</p>
+            <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                <h6 th:text="#{role} + ':'" class="pull-right">Role:</h6>
             </div>
             <div class="col-sm-5">
-                <input class="form-control" id="answer" type="text" name="answer" th:value="${answer}" placeholder="Answer"/>
+                <select class="form-control selectpicker" th:field="*{role}">
+                    <option value="" th:text="#{nothingSelected}">Nothing selected</option>
+                    <option th:each="dropValue : ${T(com.igar15.filecabinet.entity.enums.Role).values()}"
+                            th:value="${dropValue}"
+                            th:text="${dropValue}">
+                    </option>
+                </select>
+                <span class="help-block" th:if="${#fields.hasErrors('role')}">
+                        <ul>
+                            <li class="text-danger" th:each="err : ${#fields.errors('role')}" th:text="${err}"/>
+                        </ul>
+                    </span>
             </div>
         </div>
 
-        <div class="form-actions col-xs-offset-2 col-xs-10">
-            <input type="submit" class="btn btn-primary" value="Register"/>
+
+
+        <div class="row">
+            <button type="submit" class="btn-sm btn-primary offset-7" th:text="#{${user.isNew() ? 'create'  : 'update'}}">Save</button>
         </div>
+
+        <br><br>
+
+        <script type="text/javascript">
+            $(document)
+                .ready(
+                    function() {
+                        options = {
+                            common : {
+                                minChar : 8
+                            },
+                            ui : {
+                                showVerdictsInsideProgressBar : true,
+                                showErrors : true,
+                                errorMessages : {
+                                    wordLength : 'Your password is too short',
+                                    wordNotEmail : 'Do not use your email as your password',
+                                    wordSequences : 'Your password contains sequences',
+                                    wordLowercase : 'Use lower case characters',
+                                    wordUppercase : 'Use upper case characters',
+                                    wordOneNumber : 'Use numbers',
+                                    wordOneSpecialChar : 'Use special characters: [~!@#$%^&amp;*,_?]'
+                                }
+                            }
+                        };
+                        $('#password').pwstrength(options);
+                    });
+        </script>
+
     </form>
+
+    <script type="text/javascript">
+        $(document)
+            .ready(
+                function() {
+                    options = {
+                        common : {
+                            minChar : 8
+                        },
+                        ui : {
+                            showVerdictsInsideProgressBar : true,
+                            showErrors : true,
+                            errorMessages : {
+                                wordLength : 'Your password is too short',
+                                wordNotEmail : 'Do not use your email as your password',
+                                wordSequences : 'Your password contains sequences',
+                                wordLowercase : 'Use lower case characters',
+                                wordUppercase : 'Use upper case characters',
+                                wordOneNumber : 'Use numbers',
+                                wordOneSpecialChar : 'Use special characters: [~!@#$%^&amp;*,_?]'
+                            }
+                        }
+                    };
+                    $('#password').pwstrength(options);
+                });
+    </script>
+
 </div>
 
-<script type="text/javascript">
-    $(document)
-        .ready(
-            function() {
-                options = {
-                    common : {
-                        minChar : 8
-                    },
-                    ui : {
-                        showVerdictsInsideProgressBar : true,
-                        showErrors : true,
-                        errorMessages : {
-                            wordLength : 'Your password is too short',
-                            wordNotEmail : 'Do not use your email as your password',
-                            wordSequences : 'Your password contains sequences',
-                            wordLowercase : 'Use lower case characters',
-                            wordUppercase : 'Use upper case characters',
-                            wordOneNumber : 'Use numbers',
-                            wordOneSpecialChar : 'Use special characters: [~!@#$%^&amp;*,_?]'
-                        }
-                    }
-                };
-                $('#password').pwstrength(options);
-            });
-</script>
+<!--<script type="text/javascript">-->
+<!--    $(document)-->
+<!--        .ready(-->
+<!--            function() {-->
+<!--                options = {-->
+<!--                    common : {-->
+<!--                        minChar : 8-->
+<!--                    },-->
+<!--                    ui : {-->
+<!--                        showVerdictsInsideProgressBar : true,-->
+<!--                        showErrors : true,-->
+<!--                        errorMessages : {-->
+<!--                            wordLength : 'Your password is too short',-->
+<!--                            wordNotEmail : 'Do not use your email as your password',-->
+<!--                            wordSequences : 'Your password contains sequences',-->
+<!--                            wordLowercase : 'Use lower case characters',-->
+<!--                            wordUppercase : 'Use upper case characters',-->
+<!--                            wordOneNumber : 'Use numbers',-->
+<!--                            wordOneSpecialChar : 'Use special characters: [~!@#$%^&amp;*,_?]'-->
+<!--                        }-->
+<!--                    }-->
+<!--                };-->
+<!--                $('#password').pwstrength(options);-->
+<!--            });-->
+<!--</script>-->
 
 </body>
 </html>
