--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <<meta charset="UTF-8">
+    <meta charset="UTF-8">
 
     <link th:href="@{/css/bootstrap-4.5.0-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>
-
-    <script th:src="@{/static/js/jquery.min.js}"></script>
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
+
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+
+    <script th:src="@{/js/pwstrength.js}"></script>
 
     <title>$Title$</title>
 </head>
@@ -48,9 +50,13 @@
         </ul>
     </nav>
 
-        <script th:src="@{/js/jquery.min.js}"></script>
+<!--        <script th:src="@{/js/jquery.min.js}"></script>-->
         <script th:src="@{/js/popper.min.js}"></script>
         <script th:src="@{/css/bootstrap-4.5.0-dist/js/bootstrap.bundle.js}"></script>
+    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+
+    <script th:src="@{/js/pwstrength.js}"></script>
+
 
 </div>
 
